wikipendium/wiki/static/css/master.css
/* ... */
/****************
 * BODEY
****************/

body:before {
    content: "W";
    position: absolute;
    font-size: 500px;
    top: 50%;
    left: 30%;
    margin-left: -250px;
    z-index: -1;
    color: rgba(0,0,0,.1);
}

/******************
 * HEADER
******************/

#header {
}



/******************
 * SEARCHBOX
******************/

.active{
    background:#3B5998;
    background:#6D84B4;
}

#searchbox{
    width:100%;
    border:0;
    outline: none;
    margin:0 auto;
    display:block;
    padding: 4px 5px 4px 5px;
    border: 1px solid #BDC7D8;
    font-family: Georgia, serif;
    font-size:30px;
    height:60px;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
}

#suggestions{
    -webkit-appearance: none;
    -webkit-border-radius: 0;
    width:100%;
    border: 1px solid #BDC7D8;
    overflow:hidden;
    list-style-type:none;
    padding:0;
    font-family: Georgia, serif;
    font-size:30px;
    margin:0 auto;
    display:block;
    background:white;
}

#suggestions li{
    width:100%;
    padding: 4px 5px 4px 5px;
    height:60px;
    line-height:60px;
}

